--- a/NetRunner.ipynb
+++ b/NetRunner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +14,17 @@
     "import skimage\n",
     "import os\n",
     "import pickle\n",
+    "from scipy.spatial.transform import Rotation\n",
     "\n",
     "nAnchors = 24\n",
     "batchSize = 16\n",
-    "numEpochs = 2000\n",
+    "numEpochs = 400\n",
     "device = \"cpu\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +34,7 @@
     "        self.df = pd.read_pickle(file)\n",
     "        self.transform = transform\n",
     "        self.target_transform=target_transform\n",
-    "        \"\"\"\n",
-    "        self.filenames = dummy.loc[:,\"ImageFile\"]\n",
-    "        self.features = dummy.loc[:,\"Features\"]\n",
-    "        self.anchorDists = dummy.loc[:,\"AnchorDists\"]\n",
-    "        self.\"\"\"\n",
-    "    \n",
+    "     \n",
     "    def __len__(self):\n",
     "        return self.df.shape[0]\n",
     "\n",
@@ -78,7 +74,7 @@
     "\n",
     "        return classify, regress, dof_regress\n",
     "\n",
-    "def custom_loss(classify, regress, dof_regress, anchorDistsGt, dofGt, dofLoss,factors = [2.4,0,0.5]):\n",
+    "def custom_loss(classify, regress, dof_regress, anchorDistsGt, dofGt, dofLoss, crossEntropy, factors = [2.4,0,0.5]):\n",
     "    # TODO: Possible Flaw (or the reason why this works?):\n",
     "    # The net tries to learn realtive position to each anchorpoint\n",
     "    # independently, so we have a large amount of degrees of freedom, even though relative\n",
@@ -99,47 +95,60 @@
     "\n",
     "    # TODO: Use softmax on gt-dof and dof for normalization\n",
     "    lossXY = torch.sum(torch.linalg.norm(dist, axis = -1) * classify)\n",
-    "    # TODO: implement cross entropy\n",
     "    \n",
-    "    return torch.sum(factors[0] * lossXY) + factors[1] + factors[2] * dofLoss(dof_regress, dofGt)\n"
+    "    nearest = torch.argmin(torch.linalg.norm(anchorDistsGt, axis=-1), axis=-1)\n",
+    "\n",
+    "    return torch.sum(factors[0] * lossXY) + factors[1]*crossEntropy(classify, nearest) + factors[2] * dofLoss(dof_regress, dofGt)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "Expected all tensors to be on the same device, but found at least two devices, cuda:0 and cpu! (when checking arugment for argument mat1 in method wrapper_addmm)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\cabal\\Desktop\\Uni\\AML\\NetRunner.ipynb Zelle 3\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cabal/Desktop/Uni/AML/NetRunner.ipynb#W3sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m myNet\u001b[39m.\u001b[39mtrain()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cabal/Desktop/Uni/AML/NetRunner.ipynb#W3sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/cabal/Desktop/Uni/AML/NetRunner.ipynb#W3sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m classify, regress, dof_regress \u001b[39m=\u001b[39m myNet\u001b[39m.\u001b[39;49mforward(data[\u001b[39m\"\u001b[39;49m\u001b[39mFeatures\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cabal/Desktop/Uni/AML/NetRunner.ipynb#W3sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m loss \u001b[39m=\u001b[39m custom_loss(classify, regress, dof_regress, anchorDistsGt\u001b[39m=\u001b[39mdata[\u001b[39m\"\u001b[39m\u001b[39manchorDists\u001b[39m\u001b[39m\"\u001b[39m], dofGt\u001b[39m=\u001b[39mdata[\u001b[39m\"\u001b[39m\u001b[39mdofs\u001b[39m\u001b[39m\"\u001b[39m], dofLoss\u001b[39m=\u001b[39mdofLoss)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cabal/Desktop/Uni/AML/NetRunner.ipynb#W3sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n",
-      "\u001b[1;32mc:\\Users\\cabal\\Desktop\\Uni\\AML\\NetRunner.ipynb Zelle 3\u001b[0m in \u001b[0;36manchorNet.forward\u001b[1;34m(self, feats)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cabal/Desktop/Uni/AML/NetRunner.ipynb#W3sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, feats):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/cabal/Desktop/Uni/AML/NetRunner.ipynb#W3sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m     classify \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msoftmax(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mclassifier(nn\u001b[39m.\u001b[39;49mfunctional\u001b[39m.\u001b[39;49mrelu(feats))) \u001b[39m# TODO: ReLU useful?\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cabal/Desktop/Uni/AML/NetRunner.ipynb#W3sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m     regress \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mregressor(nn\u001b[39m.\u001b[39mfunctional\u001b[39m.\u001b[39mrelu(feats))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/cabal/Desktop/Uni/AML/NetRunner.ipynb#W3sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m     dof_regress \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdof_regressor(nn\u001b[39m.\u001b[39mfunctional\u001b[39m.\u001b[39mrelu(feats))\n",
-      "File \u001b[1;32mc:\\Users\\cabal\\.conda\\envs\\AML\\lib\\site-packages\\torch\\nn\\modules\\module.py:1051\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1047\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1048\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1049\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1050\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1051\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39m\u001b[39minput\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1052\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1053\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[1;32mc:\\Users\\cabal\\.conda\\envs\\AML\\lib\\site-packages\\torch\\nn\\modules\\linear.py:96\u001b[0m, in \u001b[0;36mLinear.forward\u001b[1;34m(self, input)\u001b[0m\n\u001b[0;32m     95\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[1;32m---> 96\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mlinear(\u001b[39minput\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbias)\n",
-      "File \u001b[1;32mc:\\Users\\cabal\\.conda\\envs\\AML\\lib\\site-packages\\torch\\nn\\functional.py:1847\u001b[0m, in \u001b[0;36mlinear\u001b[1;34m(input, weight, bias)\u001b[0m\n\u001b[0;32m   1845\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_variadic(\u001b[39minput\u001b[39m, weight):\n\u001b[0;32m   1846\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(linear, (\u001b[39minput\u001b[39m, weight), \u001b[39minput\u001b[39m, weight, bias\u001b[39m=\u001b[39mbias)\n\u001b[1;32m-> 1847\u001b[0m \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39;49m_C\u001b[39m.\u001b[39;49m_nn\u001b[39m.\u001b[39;49mlinear(\u001b[39minput\u001b[39;49m, weight, bias)\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Expected all tensors to be on the same device, but found at least two devices, cuda:0 and cpu! (when checking arugment for argument mat1 in method wrapper_addmm)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss in epoch 99:  5805.075838755429\n",
+      "Training Dist:  10.891908250248992 m\n",
+      "z dist:  4.3492485101531694e-05 m, dof dist:  94.86158799692436 °\n",
+      "Loss in epoch 199:  5804.656164539469\n",
+      "Training Dist:  10.892561386120109 m\n",
+      "z dist:  1.8144902137943546e-05 m, dof dist:  94.80588608859512 °\n",
+      "Loss in epoch 299:  5804.565243058198\n",
+      "Training Dist:  10.892723073506772 m\n",
+      "z dist:  1.2524017517386483e-05 m, dof dist:  94.7991191444662 °\n",
+      "Loss in epoch 399:  5805.381431643805\n",
+      "Training Dist:  10.88758367575217 m\n",
+      "z dist:  1.1711088893658536e-05 m, dof dist:  94.79808763993887 °\n"
      ]
     }
    ],
    "source": [
-    "trainDataset = AnchorDataSet(file= \"./ShopFacade/traindata_with_features_and_anchors.pkl\")\n",
+    "from math import degrees\n",
+    "\n",
+    "\n",
+    "trainDataset = AnchorDataSet(file= f\"./ShopFacade/traindata_with_features_and_anchors{nAnchors}.pkl\")\n",
     "trainDataloader = torch.utils.data.DataLoader(trainDataset, batch_size=16, shuffle=False, num_workers=0)\n",
     "\n",
     "myNet = anchorNet(nAnchors=nAnchors).to(device)\n",
     "dofLoss = nn.MSELoss()\n",
+    "crossEntropy = nn.CrossEntropyLoss()\n",
     "\n",
     "optimizer = torch.optim.Adam(myNet.parameters(), lr=0.0003)\n",
-    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=500, gamma=0.5)\n",
+    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=80, gamma=0.5)\n",
     "\n",
     "myAnchors = torch.from_numpy(np.loadtxt(f\"./ShopFacade/anchors{nAnchors}.txt\"))\n",
+    "\n",
+    "params = []\n",
     "\n",
     "for epoch in range(numEpochs):\n",
     "    epochLoss = 0\n",
     "    trainDists = []\n",
+    "    zTrain = []\n",
+    "    dofTrain = []\n",
+    "\n",
     "    for i, data in enumerate(trainDataloader):\n",
     "\n",
     "        myNet.train()\n",
@@ -147,24 +156,32 @@
     "        optimizer.zero_grad()\n",
     "        \n",
     "        classify, regress, dof_regress = myNet.forward(data[\"Features\"])\n",
-    "        loss = custom_loss(classify, regress, dof_regress, anchorDistsGt=data[\"anchorDists\"], dofGt=data[\"dofs\"], dofLoss=dofLoss)\n",
+    "        loss = custom_loss(classify, regress, dof_regress, anchorDistsGt=data[\"anchorDists\"], dofGt=data[\"dofs\"], dofLoss=dofLoss, crossEntropy=crossEntropy, factors=[2.4,1.,0.5])\n",
     "        loss.backward()\n",
     "        \n",
     "        optimizer.step()\n",
     "        epochLoss += loss.data.item()\n",
+    "        \n",
     "        with torch.no_grad():\n",
     "            bestAnchor = torch.argmax(classify, axis=1)\n",
     "\n",
     "            dist = 0\n",
+    "            dofDist = 0\n",
     "\n",
     "            for j in range(bestAnchor.size()[0]):\n",
     "                dist += torch.linalg.norm(torch.abs((myAnchors[bestAnchor[j], :] + regress.reshape(-1,nAnchors,2)[j,bestAnchor[j], :]) - (data[\"xy\"])[j]))\n",
+    "                dofDist += np.mean(Rotation.from_quat(dof_regress[j,1:].detach().numpy()).as_euler(\"xyz\", degrees=True) - Rotation.from_quat(data[\"dofs\"][j,1:].detach().numpy()).as_euler(\"xyz\",degrees=True))\n",
     "\n",
     "            trainDists.append(dist.data.item() / bestAnchor.size()[0])\n",
+    "            zTrain.append(torch.mean(dof_regress[:,0] - data[\"dofs\"][:,0]).data.item())\n",
+    "            dofTrain.append(dofDist/bestAnchor.size()[0])\n",
     "\n",
-    "    if epoch%400==0:\n",
+    "            \n",
+    "    if (epoch+1)%100==0:\n",
+    "\n",
     "        print(f\"Loss in epoch {epoch}: \", epochLoss)\n",
-    "        print(\"Training Dist: \", np.mean(trainDists))"
+    "        print(\"Training Dist: \", np.mean(trainDists),\"m\")\n",
+    "        print(\"z dist: \", np.mean(zTrain), \"m, dof dist: \", np.mean(dofTrain), \"°\")"
    ]
   },
   {
