cuda support added

--- a/NetRunner.ipynb
+++ b/NetRunner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,12 @@
     "nAnchors = 24\n",
     "batchSize = 16\n",
     "numEpochs = 400\n",
-    "device = \"cpu\""
+    "device = \"cuda\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,28 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss in epoch 99:  5805.065337379566\n",
-      "Training Dist:  10.891902151519433 m\n",
-      "z dist:  4.165970606665829e-05 m, dof dist:  94.81958031612915 °\n",
-      "Loss in epoch 199:  5804.633377028752\n",
-      "Training Dist:  10.89261197790451 m\n",
-      "z dist:  1.6969623884038886e-05 m, dof dist:  94.80089209065345 °\n",
-      "Loss in epoch 299:  5804.542009352905\n",
-      "Training Dist:  10.892794478276903 m\n",
-      "z dist:  1.2344612579538265e-05 m, dof dist:  94.79839717028104 °\n",
-      "Loss in epoch 399:  5804.683381354701\n",
-      "Training Dist:  10.897975806826455 m\n",
-      "z dist:  1.1687010829547484e-05 m, dof dist:  94.79798005351968 °\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainDataset = AnchorDataSet(file= f\"./ShopFacade/traindata_with_features_and_anchors{nAnchors}.pkl\")\n",
     "trainDataloader = torch.utils.data.DataLoader(trainDataset, batch_size=16, shuffle=False, num_workers=0)\n",
@@ -134,13 +115,13 @@
     "testDataloader = torch.utils.data.DataLoader(testDataset, batch_size=16, shuffle=False, num_workers=0)\n",
     "\n",
     "myNet = anchorNet(nAnchors=nAnchors).to(device)\n",
-    "dofLoss = nn.MSELoss()\n",
-    "crossEntropy = nn.CrossEntropyLoss()\n",
+    "dofLoss = nn.MSELoss().to(device)\n",
+    "crossEntropy = nn.CrossEntropyLoss().to(device)\n",
     "\n",
     "optimizer = torch.optim.Adam(myNet.parameters(), lr=0.0003)\n",
     "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=80, gamma=0.5)\n",
     "\n",
-    "myAnchors = torch.from_numpy(np.loadtxt(f\"./ShopFacade/anchors{nAnchors}.txt\"))\n",
+    "myAnchors = torch.from_numpy(np.loadtxt(f\"./ShopFacade/anchors{nAnchors}.txt\")).to(device)\n",
     "\n",
     "epochs = []\n",
     "testXY = []\n",
@@ -159,25 +140,37 @@
     "\n",
     "        optimizer.zero_grad()\n",
     "        \n",
-    "        classify, regress, dof_regress = myNet.forward(data[\"Features\"])\n",
-    "        loss = custom_loss(classify, regress, dof_regress, anchorDistsGt=data[\"anchorDists\"], dofGt=data[\"dofs\"], dofLoss=dofLoss, crossEntropy=crossEntropy, factors=[2.4,1.,0.5])\n",
+    "        myFeats = data[\"Features\"]\n",
+    "        myFeats = myFeats.to(device)\n",
+    "\n",
+    "        myAnchorDistsGt = data[\"anchorDists\"]\n",
+    "        myAnchorDistsGt = myAnchorDistsGt.to(device)\n",
+    "\n",
+    "        myDofGt = data[\"dofs\"]\n",
+    "        myDofGt = myDofGt.to(device)\n",
+    "\n",
+    "        myXyGt = data[\"xy\"]\n",
+    "        myXyGt = myXyGt.to(device)\n",
+    "\n",
+    "        classify, regress, dof_regress = myNet.forward(myFeats)\n",
+    "        loss = custom_loss(classify, regress, dof_regress, anchorDistsGt=myAnchorDistsGt, dofGt=myDofGt, dofLoss=dofLoss, crossEntropy=crossEntropy, factors=[2.4,1.,0.5])\n",
     "        loss.backward()\n",
     "        \n",
     "        optimizer.step()\n",
     "        epochLoss += loss.data.item()\n",
     "        \n",
     "        with torch.no_grad():\n",
-    "            bestAnchor = torch.argmax(classify, axis=1)\n",
+    "            bestAnchor = torch.argmax(classify, axis=1).to(device)\n",
     "\n",
     "            dist = 0\n",
     "            dofDist = 0\n",
     "\n",
     "            for j in range(bestAnchor.size()[0]):\n",
-    "                dist += torch.linalg.norm(torch.abs((myAnchors[bestAnchor[j], :] + regress.reshape(-1,nAnchors,2)[j,bestAnchor[j], :]) - (data[\"xy\"])[j]))\n",
-    "                dofDist += np.mean(Rotation.from_quat(dof_regress[j,1:].detach().numpy()).as_euler(\"xyz\", degrees=True) - Rotation.from_quat(data[\"dofs\"][j,1:].detach().numpy()).as_euler(\"xyz\",degrees=True))\n",
+    "                dist += torch.linalg.norm(torch.abs((myAnchors[bestAnchor[j], :] + regress.reshape(-1,nAnchors,2)[j,bestAnchor[j], :]) - (myXyGt)[j]))\n",
+    "                dofDist += np.mean(Rotation.from_quat(dof_regress[j,1:].cpu().detach().numpy()).as_euler(\"xyz\", degrees=True) - Rotation.from_quat(myDofGt[j,1:].cpu().detach().numpy()).as_euler(\"xyz\",degrees=True))\n",
     "\n",
     "            trainDists.append(dist.data.item() / bestAnchor.size()[0])\n",
-    "            zTrain.append(torch.mean(dof_regress[:,0] - data[\"dofs\"][:,0]).data.item())\n",
+    "            zTrain.append(torch.mean(dof_regress[:,0] - myDofGt[:,0]).data.item())\n",
     "            dofTrain.append(dofDist/bestAnchor.size()[0])\n",
     "\n",
     "            \n",
@@ -200,19 +193,31 @@
     "\n",
     "            myNet.eval()\n",
     "\n",
-    "            classify, regress, dof_regress = myNet.forward(data[\"Features\"])\n",
+    "            myFeats = data[\"Features\"]\n",
+    "            myFeats = myFeats.to(device)\n",
+    "\n",
+    "            myAnchorDistsGt = data[\"anchorDists\"]\n",
+    "            myAnchorDistsGt = myAnchorDistsGt.to(device)\n",
+    "\n",
+    "            myDofGt = data[\"dofs\"]\n",
+    "            myDofGt = myDofGt.to(device)\n",
+    "\n",
+    "            myXyGt = data[\"xy\"]\n",
+    "            myXyGt = myXyGt.to(device)\n",
+    "\n",
+    "            classify, regress, dof_regress = myNet.forward(myFeats)\n",
     "            \n",
-    "            bestAnchor = torch.argmax(classify, axis=1)\n",
+    "            bestAnchor = torch.argmax(classify, axis=1).to(device)\n",
     "\n",
     "            dist = 0\n",
     "            dofDist = 0\n",
     "\n",
     "            for j in range(bestAnchor.size()[0]):\n",
-    "                dist += torch.linalg.norm(torch.abs((myAnchors[bestAnchor[j], :] + regress.reshape(-1,nAnchors,2)[j,bestAnchor[j], :]) - (data[\"xy\"])[j]))\n",
-    "                dofDist += np.mean(Rotation.from_quat(dof_regress[j,1:].detach().numpy()).as_euler(\"xyz\", degrees=True) - Rotation.from_quat(data[\"dofs\"][j,1:].detach().numpy()).as_euler(\"xyz\",degrees=True))\n",
+    "                dist += torch.linalg.norm(torch.abs((myAnchors[bestAnchor[j], :] + regress.reshape(-1,nAnchors,2)[j,bestAnchor[j], :]) - (myXyGt)[j]))\n",
+    "                dofDist += np.mean(Rotation.from_quat(dof_regress[j,1:].cpu().detach().numpy()).as_euler(\"xyz\", degrees=True) - Rotation.from_quat(myDofGt[j,1:].cpu().detach().numpy()).as_euler(\"xyz\",degrees=True))\n",
     "\n",
     "            testDists.append(dist.data.item() / bestAnchor.size()[0])\n",
-    "            zTest.append(torch.mean(dof_regress[:,0] - data[\"dofs\"][:,0]).data.item())\n",
+    "            zTest.append(torch.mean(dof_regress[:,0] - myDofGt[:,0]).data.item())\n",
     "            dofTest.append(dofDist/bestAnchor.size()[0])\n",
     "        \n",
     "        testXY.append(np.mean(testDists))\n",
@@ -225,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
