tried testing things

--- a/prepData.ipynb
+++ b/prepData.ipynb
@@ -18,7 +18,7 @@
     "nAnchors = 24\n",
     "batchSize = 16\n",
     "numEpochs = 3\n",
-    "device = \"cpu\""
+    "device = \"cuda\""
    ]
   },
   {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,11 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainData = pd.read_csv(\"./ShopFacade/dataset_train.txt\", delimiter=\" \", skiprows=1)\n",
+    "trainData = pd.read_csv(\"data/ShopFacade/dataset_train.txt\", delimiter=\" \", skiprows=1)\n",
     "trainData = pd.DataFrame(data={\"ImageFile\": trainData.loc[:,\"ImageFile,\"],\n",
     "                                  \"X\": trainData.Camera,\n",
     "                                  \"Y\": trainData.Position,\n",
@@ -128,18 +128,18 @@
     "                                  \"Q\": trainData.W,\n",
     "                                  \"R\": trainData.P})\n",
     "\n",
-    "trainData = extract_feats(myModel, trainData, \"./ShopFacade/\", outfile=\"./ShopFacade/traindata_with_features.pkl\")\n",
-    "trainData, anch = define_anchors(trainData, nAnchors, f\"./ShopFacade/traindata_with_features_and_anchors{nAnchors}.pkl\")\n",
-    "np.savetxt(f\"./ShopFacade/anchors{nAnchors}.txt\", anch)"
+    "trainData = extract_feats(myModel, trainData, \"data/ShopFacade/\", outfile=\"data/ShopFacade/traindata_with_features.pkl\")\n",
+    "trainData, anch = define_anchors(trainData, nAnchors, f\"data/ShopFacade/traindata_with_features_and_anchors{nAnchors}.pkl\")\n",
+    "np.savetxt(f\"data/ShopFacade/anchors{nAnchors}.txt\", anch)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "testData = pd.read_csv(\"./ShopFacade/dataset_test.txt\", delimiter=\" \", skiprows=1)\n",
+    "testData = pd.read_csv(\"data/ShopFacade/dataset_test.txt\", delimiter=\" \", skiprows=1)\n",
     "testData = pd.DataFrame(data={\"ImageFile\": testData.loc[:,\"ImageFile,\"],\n",
     "                                  \"X\": testData.Camera,\n",
     "                                  \"Y\": testData.Position,\n",
@@ -149,8 +149,8 @@
     "                                  \"Q\": testData.W,\n",
     "                                  \"R\": testData.P})\n",
     "\n",
-    "testData = extract_feats(myModel, testData, \"./ShopFacade/\", outfile=\"./ShopFacade/testdata_with_features.pkl\")\n",
-    "testData = anchors_for_testSet(testData, anch, outfile=f\"./ShopFacade/testdata_with_features_and_anchors{nAnchors}.pkl\")"
+    "testData = extract_feats(myModel, testData, \"data/ShopFacade/\", outfile=\"data/ShopFacade/testdata_with_features.pkl\")\n",
+    "testData = anchors_for_testSet(testData, anch, outfile=f\"data/ShopFacade/testdata_with_features_and_anchors{nAnchors}.pkl\")"
    ]
   },
   {
@@ -163,7 +163,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('AML')",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -177,12 +177,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6f3fd06b0b48bde2f2f5e7c98d176e850f399d5e50bc95626d8d2defa0349bdc"
+    "hash": "0ac4e7a3f23f5e168ded2c763f8e15332e6ec0e5cbd319d79cfbd51e5ff4fd43"
    }
   }
  },
