kaggle data prep

--- a/NetRunner.ipynb
+++ b/NetRunner.ipynb
@@ -20,7 +20,7 @@
     "nAnchors = 24\n",
     "batchSize = 16\n",
     "numEpochs = 400\n",
-    "device = \"cuda\""
+    "device = \"cpu\""
    ]
   },
   {
@@ -166,7 +166,7 @@
     "            dofDist = 0\n",
     "\n",
     "            for j in range(bestAnchor.size()[0]):\n",
-    "                dist += torch.linalg.norm(torch.abs((myAnchors[bestAnchor[j], :] + regress.reshape(-1,nAnchors,2)[j,bestAnchor[j], :]) - (myXyGt)[j]))\n",
+    "                dist += torch.linalg.norm(torch.abs((myAnchors[bestAnchor[j], :] - regress.reshape(-1,nAnchors,2)[j,bestAnchor[j], :]) - (myXyGt)[j]))\n",
     "                dofDist += np.mean(Rotation.from_quat(dof_regress[j,1:].cpu().detach().numpy()).as_euler(\"xyz\", degrees=True) - Rotation.from_quat(myDofGt[j,1:].cpu().detach().numpy()).as_euler(\"xyz\",degrees=True))\n",
     "\n",
     "            trainDists.append(dist.data.item() / bestAnchor.size()[0])\n",
@@ -213,7 +213,7 @@
     "            dofDist = 0\n",
     "\n",
     "            for j in range(bestAnchor.size()[0]):\n",
-    "                dist += torch.linalg.norm(torch.abs((myAnchors[bestAnchor[j], :] + regress.reshape(-1,nAnchors,2)[j,bestAnchor[j], :]) - (myXyGt)[j]))\n",
+    "                dist += torch.linalg.norm(torch.abs((myAnchors[bestAnchor[j], :] - regress.reshape(-1,nAnchors,2)[j,bestAnchor[j], :]) - (myXyGt)[j]))\n",
     "                dofDist += np.mean(Rotation.from_quat(dof_regress[j,1:].cpu().detach().numpy()).as_euler(\"xyz\", degrees=True) - Rotation.from_quat(myDofGt[j,1:].cpu().detach().numpy()).as_euler(\"xyz\",degrees=True))\n",
     "\n",
     "            testDists.append(dist.data.item() / bestAnchor.size()[0])\n",
@@ -253,7 +253,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('AML')",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -267,12 +267,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6f3fd06b0b48bde2f2f5e7c98d176e850f399d5e50bc95626d8d2defa0349bdc"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
