--- a/prepData.ipynb
+++ b/prepData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,40 +14,44 @@
     "import skimage\n",
     "import os\n",
     "import pickle\n",
+    "from scipy.spatial.transform import Rotation\n",
     "\n",
     "nAnchors = 24\n",
     "batchSize = 16\n",
     "numEpochs = 3\n",
-    "device = \"cpu\""
+    "device = \"cpu\"\n",
+    "rng = np.random.default_rng(12345)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_feats(model, df, fileDir, size=(224,224), outfile=None, nImages=330):\n",
+    "def extract_feats(model, df, fileDir, size=(224,224), outfile=None, nImages=330, numBool = True):\n",
     "    newDf = df.copy()\n",
     "    newDf.loc[:,\"Features\"] = np.zeros((newDf.shape[0], 2208)).tolist()\n",
     "    newDf.loc[:,\"Features\"] = newDf.loc[:,\"Features\"].astype(object)\n",
     "    \n",
     "    # define new index for images where first significant digit is\n",
     "    # sequence number, thus it has to have more overall digits \n",
-    "    # than max image number. \n",
-    "    newDf.loc[:,\"ImageNum\"] = np.zeros(newDf.shape[0])\n",
-    "    indexer = 10**len(str(nImages))\n",
+    "    # than max image number.\n",
+    "    if numBool:\n",
+    "        newDf.loc[:,\"ImageNum\"] = np.zeros(newDf.shape[0])\n",
+    "        indexer = 10**len(str(nImages))\n",
+    "    \n",
     "    res = torchvision.transforms.Resize(size)\n",
     "\n",
     "    for idx, row in df.iterrows():\n",
     "\n",
     "        name = row[\"ImageFile\"].split(\".\")[0]\n",
+    "        \n",
+    "        if numBool:\n",
+    "            seq = int(name.split(\"/\")[0].split(\"q\")[-1])\n",
+    "            frame = int(name.split(\"frame\")[-1])\n",
     "\n",
-    "        seq = int(name.split(\"/\")[0].split(\"q\")[-1])\n",
-    "        frame = int(name.split(\"frame\")[-1])\n",
-    "\n",
-    "        newDf.loc[idx, \"ImageNum\"] = indexer*seq + frame\n",
-    "\n",
+    "            newDf.loc[idx, \"ImageNum\"] = indexer*seq + frame\n",
     "        im = res(torch.transpose(torch.transpose(torch.from_numpy(skimage.io.imread(os.path.join(fileDir,row[\"ImageFile\"]))), 1,2),0,1))\n",
     "\n",
     "        # extract features and put through GAP layer                                        \n",
@@ -55,7 +59,8 @@
     "        x = model.features(im.float())\n",
     "        newDf.at[idx,\"Features\"] = np.squeeze(torch.nn.AvgPool2d(7)(x).detach().numpy())\n",
     "    \n",
-    "    newDf.sort_values(\"ImageNum\", inplace=True)\n",
+    "    if numBool:\n",
+    "        newDf.sort_values(\"ImageNum\", inplace=True)\n",
     "\n",
     "    if outfile:\n",
     "        # use pickle format to make sure values of numpy array\n",
@@ -65,7 +70,7 @@
     "\n",
     "    return newDf\n",
     "\n",
-    "def define_anchors(df, nAnchors, outfile=None):\n",
+    "def define_anchors(df, nAnchors, outfile=None, randAnchors = False):\n",
     "    \n",
     "    newDf = df.copy()\n",
     "    newDf.reset_index()\n",
@@ -75,12 +80,19 @@
     "\n",
     "    myAnchors = np.zeros((nAnchors, 2))\n",
     "\n",
-    "    for i, j in enumerate(np.floor(np.linspace(0,df.shape[0], nAnchors, endpoint=False)).astype(int)):\n",
-    "        myAnchors[i,:] = np.array([newDf.loc[j, \"X\"], newDf.loc[j,\"Y\"]])\n",
+    "    if randAnchors:\n",
+    "        anchIdx = rng.permutation(newDf.shape[0])[:nAnchors]\n",
+    "        anchDf = (newDf.iloc[anchIdx]).reset_index()\n",
+    "        \n",
+    "        for index,row in anchDf.iterrows():\n",
+    "            myAnchors[index,:] = np.array([row[\"X\"], row[\"Y\"]])\n",
+    "\n",
+    "    else:\n",
+    "        for i, j in enumerate(np.floor(np.linspace(0,df.shape[0], nAnchors, endpoint=False)).astype(int)):\n",
+    "            myAnchors[i,:] = np.array([newDf.loc[j, \"X\"], newDf.loc[j,\"Y\"]])\n",
     "    \n",
     "    for index, row in newDf.iterrows():\n",
     "        newDf.at[index, \"AnchorDists\"] = myAnchors - np.array([newDf.loc[index, \"X\"], newDf.loc[index,\"Y\"]])\n",
-    "\n",
     "    if outfile:\n",
     "        newDf.to_pickle(outfile)\n",
     "\n",
@@ -99,22 +111,68 @@
     "    if outfile:\n",
     "        newDf.to_pickle(outfile)\n",
     "\n",
-    "    return newDf"
+    "    return newDf\n",
+    "\n",
+    "def prep_kaggle_data(location, model, nAnchors, trainTestSplit = 0.9):\n",
+    "\n",
+    "    kaggleAll = pd.read_csv(location +\"calibration.csv\")\n",
+    "    sc = pd.read_csv(\"./kaggle-data/train/scaling_factors.csv\")\n",
+    "    sc.index = sc.loc[:,\"scene\"]\n",
+    "\n",
+    "    translations = np.array([np.array([i.split(\" \")], dtype=float) for i in kaggleAll.loc[:,\"translation_vector\"]])*sc.loc[location.split(\"/\")[-2], \"scaling_factor\"]\n",
+    "    \n",
+    "    rots = np.array([Rotation.from_matrix(np.array([i.split(\" \")], dtype=float).reshape(3,3)).as_quat() for i in kaggleAll.loc[:,\"rotation_matrix\"]])\n",
+    "    \n",
+    "    translations = translations.reshape(-1,3)\n",
+    "\n",
+    "    kaggleAll = pd.DataFrame(data={\"ImageFile\": [kaggleAll.loc[i,\"image_id\"] + \".jpg\" for i in range(kaggleAll.shape[0])],\n",
+    "                                \"X\": translations[:,0],\n",
+    "                                \"Y\": translations[:,1],\n",
+    "                                \"Z\": translations[:,2],\n",
+    "                                \"W\": rots[:,0],\n",
+    "                                \"P\": rots[:,1],\n",
+    "                                \"Q\": rots[:,2],\n",
+    "                                \"R\": rots[:,3]})\n",
+    "\n",
+    "    mySplit = rng.permutation(kaggleAll.shape[0])\n",
+    "    lastIndex = int(np.ceil(trainTestSplit * kaggleAll.shape[0]))\n",
+    "\n",
+    "    kaggleTrain = kaggleAll.iloc[mySplit[:lastIndex]]\n",
+    "    kaggleTest = kaggleAll.iloc[mySplit[lastIndex:]]\n",
+    "    \n",
+    "    kaggleTrain = extract_feats(model, kaggleTrain, location+\"images/\", numBool=False)\n",
+    "    kaggleTrain, anch = define_anchors(kaggleTrain, nAnchors, outfile=location+f\"traindata_with_features_and_anchors{nAnchors}.pkl\", randAnchors=True)\n",
+    "\n",
+    "    kaggleTest = extract_feats(model, kaggleTest, location+\"images/\", numBool=False)             \n",
+    "    kaggleTest = anchors_for_testSet(kaggleTest,anch, outfile=location+f\"testdata_with_features_and_anchors{nAnchors}.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myModel = torchvision.models.densenet161(weights=torchvision.models.DenseNet161_Weights.IMAGENET1K_V1).float()\n",
+    "trainSets = {\"./kaggle-data/train/brandenburg_gate/\":30, \"./kaggle-data/train/sacre_coeur/\":25, \"./kaggle-data/train/notre_dame_front_facade/\":82}\n",
+    "\n",
+    "for location in trainSets.keys():\n",
+    "    prep_kaggle_data(location, myModel, trainSets[location], 0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# we use pretrained denseNet\n",
-    "myModel = torchvision.models.densenet161(pretrained=True).float()"
+    "myModel = torchvision.models.densenet161(weights=torchvision.models.DenseNet161_Weights.IMAGENET1K_V1).float()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +221,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('AML')",
+   "display_name": "Python 3.10.4 ('AML')",
    "language": "python",
    "name": "python3"
   },
@@ -177,12 +235,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6f3fd06b0b48bde2f2f5e7c98d176e850f399d5e50bc95626d8d2defa0349bdc"
+    "hash": "166128ff86268f1fcb3d3420f8f84010dca90d5eb03cf935b19af5b7f3846e40"
    }
   }
  },
