some more tests

--- a/prepData.ipynb
+++ b/prepData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "import pickle\n",
     "from scipy.spatial.transform import Rotation\n",
     "\n",
-    "nAnchors = 24\n",
+    "nAnchors = 16\n",
     "batchSize = 16\n",
     "numEpochs = 3\n",
     "device = \"cpu\"\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,35 +144,37 @@
     "    kaggleTrain, anch = define_anchors(kaggleTrain, nAnchors, outfile=location+f\"traindata_with_features_and_anchors{nAnchors}.pkl\", randAnchors=True)\n",
     "\n",
     "    kaggleTest = extract_feats(model, kaggleTest, location+\"images/\", numBool=False)             \n",
-    "    kaggleTest = anchors_for_testSet(kaggleTest,anch, outfile=location+f\"testdata_with_features_and_anchors{nAnchors}.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "myModel = torchvision.models.densenet161(weights=torchvision.models.DenseNet161_Weights.IMAGENET1K_V1).float()\n",
-    "trainSets = {\"./kaggle-data/train/brandenburg_gate/\":30, \"./kaggle-data/train/sacre_coeur/\":25, \"./kaggle-data/train/notre_dame_front_facade/\":82}\n",
+    "    kaggleTest = anchors_for_testSet(kaggleTest,anch, outfile=location+f\"testdata_with_features_and_anchors{nAnchors}.pkl\")\n",
     "\n",
-    "for location in trainSets.keys():\n",
-    "    prep_kaggle_data(location, myModel, trainSets[location], 0.9)"
+    "    np.savetxt(location+f\"anchors{nAnchors}.txt\", anch)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# we use pretrained denseNet\n",
-    "myModel = torchvision.models.densenet161(weights=torchvision.models.DenseNet161_Weights.IMAGENET1K_V1).float()"
+    "myModel = torchvision.models.densenet161(pretrained=True).float()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainSets = {\"./kaggle-data/train/brandenburg_gate/\":30, \"./kaggle-data/train/sacre_coeur/\":25, \"./kaggle-data/train/notre_dame_front_facade/\":82}\n",
+    "\n",
+    "for location in trainSets.keys():\n",
+    "    prep_kaggle_data(location, myModel, trainSets[location], 0.9)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
