vorerst letzter commit

--- a/prepData.ipynb
+++ b/prepData.ipynb
@@ -2,22 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torchvision\n",
+    "from torchvision import transforms\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import skimage\n",
     "import os\n",
     "import pickle\n",
     "from scipy.spatial.transform import Rotation\n",
+    "import PIL\n",
     "\n",
     "nAnchors = 16\n",
-    "batchSize = 16\n",
+    "batchSize = 24\n",
     "numEpochs = 3\n",
     "device = \"cpu\"\n",
     "rng = np.random.default_rng(12345)"
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,35 +148,129 @@
     "    kaggleTest = extract_feats(model, kaggleTest, location+\"images/\", numBool=False)             \n",
     "    kaggleTest = anchors_for_testSet(kaggleTest,anch, outfile=location+f\"testdata_with_features_and_anchors{nAnchors}.pkl\")\n",
     "\n",
-    "    np.savetxt(location+f\"anchors{nAnchors}.txt\", anch)"
+    "def high_covis_filter(fileDir, quantile=0.1, droppedImages = []):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    fileDir: str to directory containing images\n",
+    "    quantile: fraction of images that will be dropped\n",
+    "    droppedImages: images that have been dropped in previous steps\n",
+    "    \"\"\"\n",
+    "    fDrops = droppedImages.copy()\n",
+    "    df = pd.read_csv(os.path.join(fileDir, \"pair_covisibility.csv\"))\n",
+    "\n",
+    "    df.insert(len(df.columns), \"name0\", [i.split(\"-\")[0] for i in df.loc[:,\"pair\"]])\n",
+    "    df.insert(len(df.columns), \"name1\", [i.split(\"-\")[1] for i in df.loc[:,\"pair\"]])\n",
+    "    df.drop(\"pair\",axis=1, inplace=True)\n",
+    "\n",
+    "    # delete entries of dropped images\n",
+    "    for drop in droppedImages:\n",
+    "        df = df[np.logical_and(df.loc[:,\"name0\"] != drop, df.loc[:,\"name1\"] != drop)]\n",
+    "    \n",
+    "    avgCovis = pd.DataFrame(data={\"image\": df.loc[:,\"name0\"].unique(), \"avgCovisibility\": np.zeros(len(df.loc[:,\"name0\"].unique()))})\n",
+    "    \n",
+    "    for index, row in avgCovis.iterrows():\n",
+    "        totalCovis = df[np.logical_or(df.loc[:,\"name0\"] == row[\"image\"], df.loc[:,\"name1\"] == row[\"image\"])].loc[:,\"covisibility\"]\n",
+    "        avgCovis.loc[index,\"avgCovisibility\"] = np.mean(totalCovis)\n",
+    "    \n",
+    "    fDrops += avgCovis[avgCovis.avgCovisibility < avgCovis.avgCovisibility.quantile(quantile)].image.to_list()\n",
+    "    avgCovis = avgCovis[avgCovis.avgCovisibility >= avgCovis.avgCovisibility.quantile(quantile)]\n",
+    "\n",
+    "    print(\"done\")\n",
+    "\n",
+    "    return avgCovis, fDrops\n",
+    "\n",
+    "def randomly_alternate(dfWcovis, fileDir, highest_covis_p = 0.5, occ_size = 0.2, new_pics = 50):\n",
+    "\n",
+    "    df = dfWcovis.copy()\n",
+    "    df = (df[df.avgCovisibility >= df.avgCovisibility.quantile(highest_covis_p)]).reset_index()\n",
+    "\n",
+    "\n",
+    "    randomTrafos = np.array([transforms.RandomErasing(occ_size),\n",
+    "                    transforms.RandomInvert(p=0.7), \n",
+    "                    transforms.RandomGrayscale(p=0.7),\n",
+    "                    transforms.RandomAdjustSharpness(0.5, p = 0.7),\n",
+    "                    transforms.RandomAutocontrast(0.5),\n",
+    "                    transforms.RandomCrop(0.5),\n",
+    "                    ], dtype=object)\n",
+    "\n",
+    "    nPics = 0\n",
+    "\n",
+    "    while nPics < new_pics:\n",
+    "        idx = rng.integers(0, df.shape[0])\n",
+    "        perm = rng.permutation(len(randomTrafos))                \n",
+    "\n",
+    "        im = torch.from_numpy(skimage.io.imread(os.path.join(fileDir,df.loc[idx, \"image\"] + \".jpg\")).transpose(2,0,1))\n",
+    "\n",
+    "        T = transforms.Compose([randomTrafos[perm[0]],\n",
+    "                            randomTrafos[perm[1]],\n",
+    "                            randomTrafos[perm[2]]])\n",
+    "    \n",
+    "\n",
+    "        im = T(im)\n",
+    "\n",
+    "        newName = str(df.loc[idx, \"image\"]) + \"_aug\" + str(nPics)\n",
+    "\n",
+    "        im = PIL.Image.fromarray(im.numpy().transpose(1,2,0))\n",
+    "\n",
+    "        im.save(os.path.join(fileDir, newName+\".jpg\"))\n",
+    "        print(\"created new pics\")\n",
+    "        nPics += 1    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n",
+      "torch.Size([3, 772, 1036])\n",
+      "created new pics\n",
+      "torch.Size([3, 1086, 791])\n",
+      "created new pics\n",
+      "torch.Size([3, 690, 1059])\n",
+      "created new pics\n",
+      "torch.Size([3, 776, 1046])\n",
+      "created new pics\n",
+      "torch.Size([3, 608, 822])\n",
+      "created new pics\n"
+     ]
+    }
+   ],
+   "source": [
+    "myDf, dropped = high_covis_filter(\"./kaggle-data/train/sacre_coeur/\", 0.1)\n",
+    "randomly_alternate(myDf, \"./kaggle-data/train/sacre_coeur/images\", new_pics=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myModel = torchvision.models.densenet161(weights=torchvision.models.DenseNet161_Weights.IMAGENET1K_V1).float()\n",
+    "trainSets = {\"./kaggle-data/train/brandenburg_gate/\":30, \"./kaggle-data/train/sacre_coeur/\":25, \"./kaggle-data/train/notre_dame_front_facade/\":82}\n",
+    "\n",
+    "for location in trainSets.keys():\n",
+    "    prep_kaggle_data(location, myModel, trainSets[location], 0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# we use pretrained denseNet\n",
-    "myModel = torchvision.models.densenet161(pretrained=True).float()"
+    "myModel = torchvision.models.densenet161(weights=torchvision.models.DenseNet161_Weights.IMAGENET1K_V1).float()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainSets = {\"./kaggle-data/train/brandenburg_gate/\":30, \"./kaggle-data/train/sacre_coeur/\":25, \"./kaggle-data/train/notre_dame_front_facade/\":82}\n",
-    "\n",
-    "for location in trainSets.keys():\n",
-    "    prep_kaggle_data(location, myModel, trainSets[location], 0.9)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +319,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('AML')",
+   "display_name": "Python 3.10.4 ('AML')",
    "language": "python",
    "name": "python3"
   },
@@ -237,12 +333,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6f3fd06b0b48bde2f2f5e7c98d176e850f399d5e50bc95626d8d2defa0349bdc"
+    "hash": "166128ff86268f1fcb3d3420f8f84010dca90d5eb03cf935b19af5b7f3846e40"
    }
   }
  },
